day-20/exercises/aws-bootcamp/k8s/prod-zt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-zt
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: restricted
    bootcamp/zero-trust: "true"
